Creation of alternative training csv

--- a/big_archi.ipynb
+++ b/big_archi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +92,9 @@
     "filepath = \"\"\n",
     "train_dataset = pd.read_csv(filepath)\n",
     "train_dataset = train_dataset.replace(\"GOOD\", \"nm\")\n",
-    "train_dataset =train_dataset.replace(\"Flat loop\", \"nm\")\n",
-    "train_dataset =train_dataset.replace(\"White lift-off\", \"nm\")\n",
-    "train_dataset =train_dataset.replace(\"Black lift-off\", \"nm\")\n",
+    "train_dataset =train_dataset.replace(\"Boucle plate\", \"nm\")\n",
+    "train_dataset =train_dataset.replace(\"Lift-off blanc\", \"nm\")\n",
+    "train_dataset =train_dataset.replace(\"Lift-off noir\", \"nm\")\n",
     "train_dataset =train_dataset.replace(\"Short circuit MOS\", \"nm\")\n",
     "\n",
     "train_dataset.to_csv(\"modified_train.csv\")\n"
@@ -484,7 +484,7 @@
     "        \n",
     "\n",
     "# Créer un DataFrame pandas avec les résultats\n",
-    "final_df = pd.DataFrame(merged_data, columns=['filename', 'p_drift', 'p_missing', 'p0', 'p1', 'p2', 'p3', 'p4', 'p5'])\n",
+    "final_df = pd.DataFrame(merged_data, columns=['filename', 'p_drift', 'p0', 'p1', 'p2', 'p3', 'p4', 'p5', 'p_missing'])\n",
     "\n",
     "merged_df = pd.merge(final_df, test_df, on='filename', how='inner')\n",
     "\n",
